--- a/Styles/style.css
+++ b/Styles/style.css
@@ -25,6 +25,15 @@
 }
 #home {
     
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     
+    
+}
+#Nekooo {
+    height: 128px;
+    width: auto;
+    min-height: 128px;
+    min-width: auto;
+    max-height: 128px;
+    max-width: auto;
 }
