Acho que agora vai

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -24,8 +24,9 @@
     
 }
 #home {
-    
+    font-family: 'Ubuntu', serif;
     color: rgb(0, 0, 0);
+    /*color: #fffff06, 246, 127);*/
     
     
 }
