--- a/Styles/style.css
+++ b/Styles/style.css
@@ -4,7 +4,7 @@
 
 
 #Bar {
-    color: rgb(2, 100, 100);
+    color: #ecec5e;
     height: 48px;
     max-height: 48px;
     min-height: 48px;
@@ -14,7 +14,7 @@
     
 }
 #Shush {
-    color: rgb(2, 100, 100);
+    color: #ecec5e;
     height: 48px;
     max-height: 48px;
     min-height: 48px;
